add refresh tokens

--- a/skill-map/tsconfig.app.json
+++ b/skill-map/tsconfig.app.json
@@ -14,7 +14,9 @@
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "strictNullChecks": false,
     "jsx": "react-jsx",
+    
 
     /* Linting */
     "strict": true,
