--- a/skill-map/tsconfig.app.json
+++ b/skill-map/tsconfig.app.json
@@ -19,12 +19,14 @@
     
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "noStrictGenericChecks": false
+    
   },
   "include": ["src"]
 }
